# nixpkgs-eval-benchmarks

./: .gitignore  README.md  flake.nix  shell.nix
data/: 1775342443.json  1775711474.json  1776078227.json
nixbench/: .gitignore  Cargo.toml  rustfmt.toml
nixbench/src/: main.rs
nixbench/src/util/: mod.rs  nix.rs
nixbench/src/util/specs/: cpu.rs  memory.rs
pkgs/: attrpaths.nix  nix-versions-json.nix  nixbench.nix
